# msf-reasoning-agent

./: .gitignore  .gitleaks.toml  .mcp.json  CLAUDE.md  README.md  ecosystem.config.cjs  render.yaml
agent_audit/: seeds.py  (+9 more)
ayanakoji/athenaeum/: .env.example  .gitignore  README.md  pyproject.toml
ayanakoji/athenaeum/athenaeum/: __init__.py  cli.py  config.py  content.py  ingest.py  knowledge_base.py  models.py  ms_learn.py  search_index.py
ayanakoji/athenaeum/content/: _catalog.json
ayanakoji/athenaeum/content/ai-ml/generative-ai-with-azure-openai/: course.md  module-01-provisioning-and-deploying-models.md  module-02-prompt-engineering-and-templates.md  module-03-retrieval-augmented-generation.md  module-04-evaluation-monitoring-and-responsible-ai.md
ayanakoji/athenaeum/content/ai-ml/language-and-document-intelligence/: course.md  module-01-analyzing-and-translating-text.md  module-02-custom-language-models-and-question-answering.md  module-03-document-intelligence.md  module-04-speech-and-translation-solutions.md
ayanakoji/athenaeum/content/ai-ml/vision-and-knowledge-mining/: course.md  module-01-analyzing-images-and-extracting-text.md  module-02-custom-vision-models.md  module-03-extracting-insights-from-video.md  module-04-knowledge-mining-with-azure-ai-search.md
ayanakoji/athenaeum/content/architecture-security/designing-azure-infrastructure/: course.md  module-01-designing-compute-solutions.md  module-02-designing-network-solutions.md  module-03-designing-data-storage-solutions.md  module-04-designing-application-architecture.md
ayanakoji/athenaeum/content/architecture-security/identity-governance-resilience/: course.md  module-01-designing-identity-and-access.md  module-02-designing-governance.md  module-03-designing-logging-and-monitoring.md  module-04-designing-business-continuity.md
ayanakoji/athenaeum/content/architecture-security/zero-trust-security-architecture/: course.md  module-01-zero-trust-strategy-mcra-mcsb.md  module-02-designing-security-operations.md  module-03-infrastructure-and-posture-management.md  module-04-securing-applications-and-data.md
ayanakoji/athenaeum/content/cloud-backend/azure-compute-foundations/: course.md  module-01-hosting-web-apis-app-service.md  module-02-event-driven-azure-functions.md  module-03-containerized-solutions.md  module-04-scaling-configuration-diagnostics.md
ayanakoji/athenaeum/content/cloud-backend/cloud-data-and-storage/: course.md  module-01-working-with-cosmos-db.md  module-02-reacting-with-the-change-feed.md  module-03-blob-storage-with-the-sdk.md  module-04-data-lifecycle-and-policies.md
ayanakoji/athenaeum/content/cloud-backend/securing-and-integrating-apps/: course.md  module-01-identity-platform-auth.md  module-02-secrets-keys-managed-identities.md  module-03-api-management.md  module-04-event-message-integration.md
ayanakoji/athenaeum/content/data-engineering/batch-data-processing/: course.md  module-01-ingest-and-transform-with-spark.md  module-02-transforming-with-tsql-and-synapse.md  (+2 more)
ayanakoji/athenaeum/scripts/: provision.sh
ayanakoji/backend/: .env.example  README.md  athenaeum.db-shm  athenaeum.db-wal  pyproject.toml  start.cjs
ayanakoji/backend/agent_audit/: __init__.py  attacks_answer.py  attacks_assessment_guard.py  attacks_gate.py  attacks_grader.py  attacks_grounding.py  attacks_guards.py  attacks_llm.py  attacks_manager.py  attacks_manager_quality.py  attacks_orchestrator.py  attacks_recommend.py  attacks_router.py  attacks_schedule.py  attacks_studyplan.py  evaluators.py  golden.py  harness.py  run.py
ayanakoji/backend/agent_audit/datasets/: README.md  gate.jsonl  grounding.jsonl  router.jsonl
ayanakoji/backend/app/: __init__.py  config.py  db.py  foundry.py  main.py
ayanakoji/backend/app/agent/: __init__.py  answer.py  assessment_guard.py  assessor.py  clock.py  contracts.py  gate.py  gate_heuristic.py  grader.py  grounding.py  grounding_azure.py  grounding_verifier.py  guards.py  llm.py  orchestrator.py  output_guard.py  prompt_shields.py  recommend.py  router_agent.py  schedule_edit.py  scheduler.py  state.py  study_plan.py
ayanakoji/backend/app/assessments/: __init__.py  azure_blob.py  engine.py  loader.py  models.py  repository.py  router.py  schemas.py  seed.py  validation.py
ayanakoji/backend/app/catalog/: content.py  loader.py  models.py  router.py
ayanakoji/backend/app/courses/: assessment_router.py  feedback.py  models.py  practice_router.py  repository.py  router.py  schemas.py  service.py  skill_router.py
ayanakoji/backend/app/data/: work_iq.json
ayanakoji/backend/app/manager/: __init__.py  agent.py  router.py  schemas.py  service.py
ayanakoji/backend/app/notifications/: __init__.py  background.py  cron.py  models.py  repository.py  router.py  schemas.py
ayanakoji/backend/app/workiq/: __init__.py  models.py  repository.py  router.py
ayanakoji/backend/scripts/: assessments_azure_smoke.py  assessments_push.py  assessments_seed.py  assessments_smoke.py  foundry_smoke.py  generate_work_iq.py  validate_banks.py
ayanakoji/backend/tests/: conftest.py  test_agent_agents.py  test_agent_assessor.py  test_agent_clock.py  test_agent_grounding.py  test_agent_llm.py  test_agent_orchestrator.py  test_agent_recommend.py  test_agent_schedule_edit.py  test_agent_scheduler.py  test_agent_state_guards.py  test_agent_study_plan.py  test_answer_skill_gate.py  test_assessment_guard.py  test_assessment_session.py  test_assessments_azure_blob.py  test_assessments_endpoints.py  test_assessments_loader.py  test_assessments_seed.py  test_assessments_validation.py  test_bank_choice_by_id.py  test_catalog.py  test_config.py  test_course_column_migration.py  test_course_skill_fields.py  test_courses_endpoints.py  test_courses_models.py  test_courses_service.py  test_evaluations_feedback.py  test_feedback_chat.py  test_feedback_dispatch.py  test_feedback_resolution.py  test_foundry.py  test_gate_heuristic.py  test_grounding_azure_integration.py  test_grounding_relevance.py  test_grounding_verifier.py  test_guards_fabrication.py  test_guards_groundedness.py  test_health.py  (+30 more)
(+218 files in other folders)
