[project]
name = "athenaeum"
version = "0.1.0"
description = "Athenaeum — grounded course-content synthesis & Foundry IQ ingestion framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "azure-search-documents==11.6.0b4",
    "azure-identity>=1.19",
    "azure-core>=1.32",
    "httpx>=0.27",
    "typer>=0.15",
    "rich>=13.9",
    "python-frontmatter>=1.1",
    "tenacity>=9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["athenaeum"]

[project.scripts]
athenaeum = "athenaeum.cli:app"

# ─────────────────────────────────────────────────────────────
# Tooling
# ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["athenaeum", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
