[project]
name = "athenaeum-backend"
version = "0.1.0"
description = "Athenaeum — Enterprise Learning Agent backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "jsonschema>=4.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
]
# Azure / Microsoft Foundry SDKs. Optional group (not installed in the offline
# CI lane) so the web skeleton + unit tests stay cloud-free and fast.
foundry = [
    "openai>=1.54",
    "azure-identity>=1.19",
    "azure-ai-projects>=1.0.0",
    "azure-storage-blob>=12",
    # Live Foundry IQ grounding host: agentic-retrieve knowledge base + vector/semantic index.
    "azure-search-documents>=11.7.0b2",
    # Groundedness / Relevance / Retrieval scoring of grounded answers (NLI-style judges).
    "azure-ai-evaluation>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ─────────────────────────────────────────────────────────────
# Tooling config
# ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

# Optional Foundry SDKs may be absent in the offline lane; tolerate missing stubs.
# jsonschema ships no type stubs — tolerate it the same way.
[[tool.mypy.overrides]]
module = ["openai.*", "azure.*", "jsonschema.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: tests that hit live Azure/Foundry (need creds + foundry group)"]

[tool.coverage.run]
# app/foundry.py is a cloud adapter exercised by the live smoke + integration test,
# not the offline unit gate (its SDKs aren't installed in CI). Keep it out of the
# offline coverage number so the gate measures deterministic, testable logic.
# grounding_azure.py (agentic-retrieve client) and grounding_verifier.py's Azure
# evaluator path are the same shape: live-only adapters, exercised by integration smoke.
omit = [
    "app/foundry.py",
    "app/assessments/azure_blob.py",
    "app/agent/grounding_azure.py",
    "app/agent/grounding_verifier.py",
    "tests/*",
    "scripts/*",
]
